--- a/src/css/timeline.css
+++ b/src/css/timeline.css
@@ -1,6 +1,14 @@
 .project-title-image{
-	width: 300px;
+	width: 500px;
 	height: auto;
+	object-fit: cover;
+	border-radius: 10px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.small-project-title-image{
+	width: auto;
+	height: 200px;
 	object-fit: cover;
 	border-radius: 10px;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
