--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -25,6 +25,7 @@
 
 	<!-- Main Stylesheet -->
 	<link href="css/theme-thomson.css" rel="stylesheet">
+	<link href="css/custom.css" rel="stylesheet">
 
 
 	{% block head %} 
@@ -41,6 +42,7 @@
 	<script src="plugins/bootstrap/bootstrap.min.js"></script>
 	<script src="plugins/aos/aos.js"></script>
 	<script src="plugins/owl-carousel/owl.carousel.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
 	<script src="plugins/shuffle/shuffle.min.js"></script>
 	<script src="plugins/magnific-popup/jquery.magnific-popup.min.js"></script>
 	<script src="plugins/animated-text/animated-text.js"></script>
