--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -23,6 +23,9 @@
 	<link rel="stylesheet" href="plugins/magnific-popup/magnific-popup.css">
 	<link rel="stylesheet" href="plugins/animated-text/animated-text.css">
 
+
+	<link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+          
 	<!-- Main Stylesheet -->
 	<link href="css/theme-thomson.css" rel="stylesheet">
 	<link href="css/custom.css" rel="stylesheet">
