add skills to cv page

--- a/src/_includes/skills.html
+++ b/src/_includes/skills.html
@@ -2,48 +2,57 @@
 	
 	<div class="container">
 		<h3 class="dark-headline">Technologies</h3>
-		<div class="row">
-			<div class="col card">
-				<h3 class="card-header dark-headline">Expert</h3>
-				<div class="skillsGrid card-body">
-					<i class="skill devicon-unity-plain"></i>
-					<i class="devicon-csharp-plain"></i>
-					<i class="devicon-git-plain"></i>
-				</div>            
+		<div class="row g-4">
+			<div class="col-lg-3 col-md-6 col-sm-12 mb-4">
+					<div class="card">
+						<h3 class="card-header dark-headline">Expert</h3>
+						<div class="card-body skillsGrid">
+						<i class="skill devicon-unity-plain"></i>
+						<i class="devicon-csharp-plain"></i>
+						<i class="devicon-git-plain"></i>
+					</div>            
+				</div>
+				
 			</div>
-			<div class="col card">
-				<h3 class="card-header dark-headline">Solid</h3>
-				<div class="skillsGrid card-body">
-					<i class="devicon-javascript-plain"></i>
-					<i class="devicon-java-plain"></i>
-					<i class="devicon-html5-plain"></i>
-					<i class="devicon-wordpress-plain"></i>
-					<i class="devicon-jenkins-line"></i>
-					<i class="devicon-blender-original"></i>
-				</div>            
+			<div class="col-lg-3 col-md-6 col-sm-12 mb-4">
+				<div class="card">
+					<h3 class="card-header dark-headline">Solid</h3>
+					<div class="card-body skillsGrid">
+						<i class="devicon-javascript-plain"></i>
+						<i class="devicon-java-plain"></i>
+						<i class="devicon-html5-plain"></i>
+						<i class="devicon-wordpress-plain"></i>
+						<i class="devicon-jenkins-line"></i>
+						<i class="devicon-blender-original"></i>
+					</div>            
+				</div>
+				
 			</div>
-			<div class="col card">
-				<h3 class="card-header dark-headline">Growing</h3>
-				<div class="card-body skillsGrid">
-					<i class="devicon-css3-plain-wordmark"></i>
-					<i class="devicon-nodejs-plain-wordmark"></i>
-					<i class="devicon-eleventy-plain"></i>
-					<i class="devicon-bootstrap-plain"></i>			
-					<i class="devicon-prisma-original"></i>
-					<i class="devicon-react-original"></i>
-				</div>            
+			<div class="col-lg-3 col-md-6 col-sm-12 mb-4">
+				<div class="card">
+					<h3 class="card-header dark-headline">Growing</h3>
+					<div class="card-body skillsGrid">
+						<i class="devicon-css3-plain-wordmark"></i>
+						<i class="devicon-nodejs-plain-wordmark"></i>
+						<i class="devicon-eleventy-plain"></i>
+						<i class="devicon-bootstrap-plain"></i>			
+						<i class="devicon-prisma-original"></i>
+						<i class="devicon-react-original"></i>
+					</div>            
+				</div>
 			</div>
-			<div class="col card">
-				<h3 class="card-header dark-headline">Basic</h3>
-				<div class="card-body skillsGrid">
-					<i class="devicon-go-original-wordmark"></i>
-					<i class="devicon-python-plain"></i>
-					<i class="devicon-c-plain"></i>
-					<i class="devicon-spring-original"></i>
-					<i class="devicon-cplusplus-plain"></i>
-				</div>            
+			<div class="col-lg-3 col-md-6 col-sm-12 mb-4">
+				<div class="card">
+					<h3 class="card-header dark-headline">Basic</h3>
+					<div class="card-body skillsGrid">
+						<i class="devicon-go-original-wordmark"></i>
+						<i class="devicon-python-plain"></i>
+						<i class="devicon-c-plain"></i>
+						<i class="devicon-spring-original"></i>
+						<i class="devicon-cplusplus-plain"></i>
+					</div>            
+				</div>
 			</div>
-			
 		</div>
 		
 	</div>
