--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -81,7 +81,7 @@ h2 {
 
 .skillsGrid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(75px, 1fr));
+    grid-template-columns: repeat(2, 1fr);
     grid-gap: 5px;
     justify-content: center;
 }
@@ -89,17 +89,23 @@ h2 {
 .skillsGrid i {
     font-size: 3em;
     color: var(--main); 
+    text-align: center;
 }
 
-.skills{
+.skills {
     margin-top: 50px;
     margin-bottom: 150px;
 }
 
-.skills .col.card {
-    padding: 0 0 0 0;
-    margin: 10px;
+.skills .card {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
     background-color: var(--light-bg);
+}
+
+.skills .card-body {
+    flex: 1 1 auto;
 }
 
 .skills .card{
