center type effect

--- a/src/_includes/layouts/cv.html
+++ b/src/_includes/layouts/cv.html
@@ -5,21 +5,17 @@
 
 
 
-<section class="section banner">
-	<div class="container">
-		<div class="row">
-			<div class="col"></div>
-            <div class="col-lg-6">	
-				<div class="typing-container">
-					<h2 class="cd-headline clip is-full-width mb-4 ">
-						Friedrich Wessel<br>
-					</h2>
-				</div>
-			</div>
-            <div class="col"></div>
-		</div>
-        <div class="container text-center">
-            Based in Hamburg. Senior Game Developer, Tech Lead, Trainer, 15 years of experience. I create sustainable software architectures, boost team productivity, and share knowledge through live coding and professional training. Passionate about leveraging skills for a more sustainable future.
+<section class="section cv banner d-flex flex-column justify-content-center align-items-center">
+	<div class="container-fluid full-height d-flex flex-column justify-content-center align-items-center">
+        
+        <div class="typing-container-center">
+            <div class="typing-text">
+                <h2>Friedrich Wessel</h2>
+            </div>
+        </div>
+        
+        <div class="container text-center cv-header col-lg-9 col-md-12">
+            Based near Lübeck. Senior Game Developer, Tech Lead, Trainer, 15 years of experience. I create sustainable software architectures, boost team productivity, and share knowledge through live coding and professional training. Passionate about leveraging skills for a more sustainable future.
         </div>
 	</div>
 </section>
@@ -33,7 +29,7 @@
     
     <div class="row element-container">
         <div class="col-md-4 left-column">
-            <h2>Experience</h2>
+            <h4>Experience</h4>
         </div>
         
         <div class="col-md-8 right-column">
@@ -45,9 +41,10 @@
                 </div>
             {% endfor %}
         </div>
-
+    </div>
+    <div class="row element-container">
         <div class="col-md-4 left-column">
-            <h2>Education</h2>
+            <h4>Education</h4>
         </div>
         
         <div class="col-md-8 right-column">
