--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -27,6 +27,24 @@ h2 {
     color: var(--dark-main);
 }
 
+.typing-container-center{
+    width: 50%;
+    max-width: 50%;
+    position: relative;
+    text-align: center;
+}
+
+.typing-text{
+    display: inline-block;
+    border-right: 2px solid rgb(255, 255, 255);
+    overflow: hidden;
+    white-space: nowrap;
+    position: relative;
+    animation:  typing 3s steps(30, end),
+                blink-caret 0.75s step-end infinite,
+                cursor-hide 0s 3s forwards;
+}
+
 .typing-container {
     width: 100%;
     max-width: 100%;
@@ -115,10 +133,59 @@ h2 {
 .skills .card-header{
     background-color: var(--dark-bg);
     color: var(--light-text);
-    font-size: 24px;
+    font-size: 20px;
 }
 
 
+/* CV */ 
+
+.cv.banner{
+    height: 400px;
+     
+}
+
+.cv-header {
+    font-size: 25px;
+}
+
+@media (max-width: 767px) {
+    .cv-header {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 992px) {
+    .cv-header {
+        font-size: 18px;
+    }
+}
+
+
+.left-column h4::after {
+    content: '';
+    display: block;
+    width: 100%; 
+    height: 4px;
+    background-color: var(--dark-bg);
+    position: absolute;
+    bottom: -8px; 
+    left: 0;
+}
+
+.left-column h4 {
+    margin: 0;
+    padding-bottom: 5px;
+    display: inline-block;
+    position: relative;
+    text-transform: uppercase;
+    color: var(--main);
+}
+
+.element-container {
+    border-bottom: 2px solid var(--light-bg); 
+    padding-left: 10px 0;
+    margin-bottom: 15px;
+}
 
 /* Portfolio masonry */
 
