--- a/src/_includes/skills.html
+++ b/src/_includes/skills.html
@@ -7,23 +7,22 @@
 					<div class="card">
 						<h3 class="card-header dark-headline">Expert</h3>
 						<div class="card-body skillsGrid">
-						<i class="skill devicon-unity-plain"></i>
-						<i class="devicon-csharp-plain"></i>
-						<i class="devicon-git-plain"></i>
-					</div>            
-				</div>
-				
+							<a href="https://unity.com/de" title="unity3d"><i class="skill devicon-unity-plain"></i></a>
+							<i class="devicon-csharp-plain" title="C#"></i>
+							<i class="devicon-git-plain" title="git"></i>
+						</div>            
+					</div>
 			</div>
 			<div class="col-lg-3 col-md-6 col-sm-12 mb-4">
 				<div class="card">
 					<h3 class="card-header dark-headline">Solid</h3>
 					<div class="card-body skillsGrid">
-						<i class="devicon-javascript-plain"></i>
-						<i class="devicon-java-plain"></i>
-						<i class="devicon-html5-plain"></i>
-						<i class="devicon-wordpress-plain"></i>
-						<i class="devicon-jenkins-line"></i>
-						<i class="devicon-blender-original"></i>
+						<i class="devicon-javascript-plain" title="javaScript"></i>
+						<i class="devicon-java-plain" title="java"></i>
+						<i class="devicon-html5-plain" title="HTML5"></i>
+						<a href="https://wordpress.org/" title="wordpress"><i class="devicon-wordpress-plain" title="wordpress"></i></a>
+						<a href="https://www.jenkins.io/" title="jenkins"><i class="devicon-jenkins-line"></i></a>
+						<a href="https://www.blender.org/" title="blender"><i class="devicon-blender-original" title="blender3d"></i></a>
 					</div>            
 				</div>
 				
@@ -32,12 +31,12 @@
 				<div class="card">
 					<h3 class="card-header dark-headline">Growing</h3>
 					<div class="card-body skillsGrid">
-						<i class="devicon-css3-plain-wordmark"></i>
-						<i class="devicon-nodejs-plain-wordmark"></i>
-						<i class="devicon-eleventy-plain"></i>
-						<i class="devicon-bootstrap-plain"></i>			
-						<i class="devicon-prisma-original"></i>
-						<i class="devicon-react-original"></i>
+						<i class="devicon-css3-plain-wordmark" title="css3"></i>
+						<i class="devicon-nodejs-plain-wordmark" title="nodeJS"></i>
+						<a href="https://www.11ty.dev/"><i class="devicon-eleventy-plain" title="eleventy"></i></a>
+						<i class="devicon-bootstrap-plain" title="Bootstrap5"></i>			
+						<i class="devicon-prisma-original" title="prisma"></i>
+						<i class="devicon-react-original" title="react"></i>
 					</div>            
 				</div>
 			</div>
@@ -45,11 +44,11 @@
 				<div class="card">
 					<h3 class="card-header dark-headline">Basic</h3>
 					<div class="card-body skillsGrid">
-						<i class="devicon-go-original-wordmark"></i>
-						<i class="devicon-python-plain"></i>
-						<i class="devicon-c-plain"></i>
-						<i class="devicon-spring-original"></i>
-						<i class="devicon-cplusplus-plain"></i>
+						<i class="devicon-go-original-wordmark" title="golang"></i>
+						<i class="devicon-python-plain" title="python"></i>
+						<i class="devicon-c-plain" title="plain C"></i>
+						<i class="devicon-spring-original" title="springboot"></i>
+						<i class="devicon-cplusplus-plain" title="C++"></i>
 					</div>            
 				</div>
 			</div>
