--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -5,6 +5,7 @@
     --light-bg: rgb(194, 232, 210, 0.25);
     --dark-bg: rgb(21, 52, 33);
     --light-text: #fff;
+    --highlight: #f19e0f;
 }
 
 h2 {
@@ -104,9 +105,12 @@ h2 {
     justify-content: center;
 }
 
-.skillsGrid i {
+.skillsGrid i{
     font-size: 3em;
     color: var(--main); 
+    text-align: center;
+}
+.skillsGrid a {
     text-align: center;
 }
 
@@ -166,7 +170,7 @@ h2 {
     display: block;
     width: 100%; 
     height: 4px;
-    background-color: var(--dark-bg);
+    background-color: var(--highlight);
     position: absolute;
     bottom: -8px; 
     left: 0;
@@ -179,6 +183,12 @@ h2 {
     position: relative;
     text-transform: uppercase;
     color: var(--main);
+}
+
+.experience h2 {
+    color: var(--dark-main);
+    font-weight: 500;
+    font-size: 32px;
 }
 
 .element-container {
