--- a/src/_includes/navbar.html
+++ b/src/_includes/navbar.html
@@ -11,7 +11,7 @@
 		  <div class="collapse navbar-collapse" id="navbarsExample09">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item  active"><a class="nav-link" href="/index.html">Home</a></li>
-				{% for page in collections.pages %}
+				{% for page in collections.navbar %}
 					<li class="nav-item"><a class="nav-link" href="{{page.url}}">{{page.data.title}}</a></li>
 				{% endfor %}
 			</ul>
