fix footer link

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,10 +1,15 @@
 <section class="footer">
 	<div class="container">
 		<div class="row ">
-			<div class="col-lg-6">
-				<p class="mb-0">Copyrights © 2024 • Friedrich Wessel. Theme based on <a href="themefisher.com" class="text-white">Themefisher</a></p>
-			</div>
-			<div class="col-lg-6">
+			<div class="col-lg-4">
+				<p class="mb-0">Copyrights © 2024 • Friedrich Wessel.</p>
+            </div>
+            <div class="col-lg-4">
+                <p class="mb-1"> Theme based on <a href="https://themefisher.com/products/thomson-bootstrap" class="text-white" target="_blank">Thomson Bootstrap</a></p>
+            </div>
+                
+			
+			<div class="col-lg-4">
 				<div class="widget footer-widget text-lg-right mt-5 mt-lg-0">
                     <ul class="list-inline mb-0">
 						<li class="list-inline-item"><a href="/pages/contact">Contact</a>
